layout bug fix nav button link fix position of mobile drop down fix

--- a/client/parties.css
+++ b/client/parties.css
@@ -191,13 +191,16 @@ html, body {
 
   .sub-navbar {
     width: 100%;
-    padding-left: 15px;
     position: static;
   }
 
   .sub-navbar .container-fluid-wide .navbar-collapse {
     padding-left: 15px;
     padding-right: 15px;
+  }
+
+  .sub-navbar > .container-fluid-wide {
+    padding-left: 15px;
   }
 
   .map-col,
@@ -213,6 +216,10 @@ html, body {
 
   .sub-col {
     position: static;
+  }
+  .open > .dropdown-menu {
+    left: auto;
+    right: 0;
   }
 }
 
